--- a/CV_Projekt/CV_Projekt/Views/Profile/Profile.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Profile/Profile.cshtml
@@ -1,20 +1,133 @@
 ﻿@model ProfileViewModel
 
-<p>@Model.User.FirstName @Model.User.LastName</p>
+<section class="h-100">
+    <div class="container py-5 h-100">
+        <div class="row d-flex justify-content-center">
+            <div class="col col-lg-9 col-xl-8">
+                <div class="card">
+                    <div class="rounded-top text-white d-flex flex-row bg-dark" style=" height:200px;">
+                        <div class="ms-4 mt-5 d-flex flex-column" style="width: 150px;">
+                            <img src="@Url.Content(Model.User.PictureUrl)"
+                                 alt="Generic placeholder image" class="img-fluid img-thumbnail mt-4 mb-2"
+                                 style="width: 150px; z-index: 1">
+                            <button type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-outline-dark text-body" data-mdb-ripple-color="dark" style="z-index: 1;">
+								<i class="fa-solid fa-gear"></i> <a asp-controller="Account" asp-action="Settings" asp-route-id="@Model.User.Id">Ändra Profil</a>
+                            </button>
+                            <button type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-outline-dark text-body" data-mdb-ripple-color="dark" style="z-index: 1; margin-top:0.5rem;" >
+                                <i class="fa-solid fa-file-circle-plus"></i>
+                                <a asp-controller="Cv" asp-action="CreateCv" asp-route-id="@Model.User.Id">Skapa CV</a>
+                            </button>
+                            <button type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-outline-dark text-body" data-mdb-ripple-color="dark" style="z-index: 1; margin:0.5rem 0 0.5rem 0">
+                                <i class="fa-solid fa-envelope text-black position-relative">
+                                    <span class="badge rounded-pill badge-notification bg-danger position-absolute top-0 left-0 translate-middle" style="font-size:0.5rem;">1</span>
+                                </i>
+                                Meddelanden
+                            </button>
+                        </div>
+                        <div class="ms-3" style="margin-top: 130px;">
+                            <h5>@Model.User.FirstName @Model.User.LastName</h5>
+                            <p>@Model.User.UserName</p>
+                        </div>
+                    </div>
+                    <div class="p-4 text-black bg-body-tertiary">
+                        <div class="d-flex justify-content-end text-center py-1 text-body">
+                            <div>
+                                <p class="mb-1 h5">21</p>
+                                <p class="small text-muted mb-0">Projekt</p>
+                            </div>
+                            <div class="px-3">
+                                <p class="mb-1 h5">1026</p>
+                                <p class="small text-muted mb-0">Antal visningar</p>
+                            </div>
+                            @* <div>
+                                <p class="mb-1 h5">478</p>
+                                <p class="small text-muted mb-0"></p>
+                            </div> *@
+                        </div>
+                    </div>
+                    <div class="card-body p-4 text-black">
+                        <div class="mb-5  text-body">
+                            <p class="lead fw-normal my-1">Kontaktinformation</p>
+                            <div class="p-4 bg-body-tertiary">
+                                
+                                <p class="font-italic mb-1">@Model.User.ContactInformation.Address</p>
+                                <p class="font-italic mb-1">@Model.User.ContactInformation.Phone</p>
+                                
+                            </div>
+                        <div class="d-flex justify-content-between align-items-center mb-4 text-body">
+                            <p class="lead fw-normal mb-0">Mina Projekt</p>
+                            <p class="mb-0"><a href="#!" class="text-muted">Visa alla</a></p>
+                        </div>
+                        <div class="container">
+                            @foreach (var proj in Model.User.JoinedProjects)
+                            {
+                                <div class="row g-2">
+                                <div class="card col mb-2">
+                                    <img src="https://mdbcdn.b-cdn.net/img/Photos/Lightbox/Original/img%20(112).webp" alt="image 1"
+                                         class="card-img-top w-100 rounded-3">
+                                         <div class="card-body">
+                                             <p class="card-text">@proj.Title</p>
+                                             <p class="card-text">@proj.Description</p>
+                                         </div>
+                                </div>
+                                <div class="col mb-2">
+                                    <img src="https://mdbcdn.b-cdn.net/img/Photos/Lightbox/Original/img%20(107).webp" alt="image 1"
+                                         class="card-img-top w-100 rounded-3">
+                                    <div class="card-body">
+                                            <p class="card-text">@proj.Title</p>
+                                            <p class="card-text">@proj.Description</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row g-2">
+                                <div class="col">
+                                    <img src="https://mdbcdn.b-cdn.net/img/Photos/Lightbox/Original/img%20(108).webp" alt="image 1"
+                                         class="card-img-top w-100 rounded-3">
+                                    <div class="card-body">
+                                                <p class="card-text">@proj.Title</p>
+                                                <p class="card-text">@proj.Description</p>
+                                    </div>
+                                </div>
+                                <div class="col">
+                                    <img src="https://mdbcdn.b-cdn.net/img/Photos/Lightbox/Original/img%20(114).webp" alt="image 1"
+                                         class="card-img-top w-100 rounded-3">
+                                    <div class="card-body">
+                                                <p class="card-text">@proj.Title</p>
+                                                <p class="card-text">@proj.Description</p>
+                                    </div>
+                                </div>
+                            </div>
+                            }
+                        </div>
 
-
-<div class="d-flex justify-content-center mt-2">
-    <form asp-controller="Cv" asp-action="IncrementCvViews" method="post">
-        <input type="hidden" name="id" value="@Model.CV.Id" />
-        <button type="submit">
-            VISA CV
-        </button>
-    </form>
-</div>
-
-<div class="d-flex justify-content-center mt-2">
-    <a asp-controller="ProfileProject" asp-action="ProfileProject" asp-route-id="@Model.User.Id" class="btn btn-primary">VISA PROJEKT</a>
-</div>
-
-
-
+                            <div class="row g-2">
+                                @foreach (var project in Model.User.CreatedProjects)
+                                {
+                                    <div class="card col mb-2">
+                                        <img src="https://mdbcdn.b-cdn.net/img/Photos/Lightbox/Original/img%20(112).webp" alt="image 1"
+                                             class="card-img-top w-100 rounded-3">
+                                        <div class="card-body">
+                                            <p class="card-text">@project.Title</p>
+                                            <p class="card-text">@project.Description</p>
+                                        </div>
+                                    </div>
+                                }
+                                @foreach (var project in Model.User.JoinedProjects)
+                                {
+                                    <div class="card col mb-2">
+                                        <img src="https://mdbcdn.b-cdn.net/img/Photos/Lightbox/Original/img%20(112).webp" alt="image 1"
+                                             class="card-img-top w-100 rounded-3">
+                                        <div class="card-body">
+                                            <p class="card-text">@project.Title</p>
+                                            <p class="card-text">@project.Description</p>
+                                        </div>
+                                    </div>
+                                }
+                            </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
+    </div>
+</section>
