--- a/CV_Projekt/CV_Projekt/Views/Shared/_Layout.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Shared/_Layout.cshtml
@@ -32,12 +32,12 @@
                         @if(User.Identity.IsAuthenticated)
                         {
                             <li class="nav-item">
-                                <a asp-controller="Profile" asp-action="UserProfile" class="nav-link text-white">
+                                <a asp-controller="Profile" asp-action="Profile" asp-route-aUserName="@User.Identity.Name" class="nav-link text-white">
                                     <i class="fa-solid fa-user"></i>
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-white" href="#">
+                                <a class="nav-link text-white">
                                     <i class="fa-solid fa-envelope text-light position-relative">
                                         <span class="badge rounded-pill badge-notification bg-danger position-absolute top-0 left-0 translate-middle" style="font-size:0.5rem;">1</span>
                                     </i>
