--- a/CV_Projekt/CV_Projekt/Views/Home/Index.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Home/Index.cshtml
@@ -62,13 +62,12 @@
                                 </ul>
                             }
                             
-                                <div class="text-center position-absolute bottom-0 start-0 w-100">
-                                    <form asp-controller="Cv" asp-action="IncrementCvViews" method="post">
-                                        <input type="hidden" name="id" value="@cv.Id"/>
-                                        <button type="submit" class="btn text-light"
+                            <div class="text-center position-absolute bottom-0 start-0 w-100">
+                                <form method="get" asp-controller="Cv" asp-action="CV" asp-route-id="@cv.Id">
+                                     <button type="submit" class="btn text-light"
                                                 style="background-color:#ff6219; margin-bottom:2rem;">
                                                 Visa CV
-                                        </button>
+                                     </button>
                                 </form>
                             </div>
 
