--- a/CV_Projekt/CV_Projekt/Views/Cv/Cv.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Cv/Cv.cshtml
@@ -12,7 +12,7 @@
 							<div class="col-sm-4">
 					<div class="rounded-top text-dark d-flex flex-row" >
 						<div class="ms-4 mt-5 d-flex flex-column">
-							<img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-profiles/avatar-1.webp"
+							<img src="@Url.Content(Model.Owner.PictureUrl)"
 								 alt="Generic placeholder image" class="img-fluid img-thumbnail mt-4 mb-2"
 											 style="width: 150px; z-index: 1; box-shadow:2px 2px 4px dimgray">
 									</div>
@@ -33,7 +33,7 @@
 					<div class="card-body p-4 text-black">
 						<div class="mb-5  text-body">
 										<div class="d-flex justify-content-center mt-2" style="margin-bottom:2rem;">
-											<a asp-controller="Profile" asp-action="Profile" asp-route-id="@Model.Owner.Id" class="btn" style="background-color:#ff6219; color:#fff;">Till Profil</a>
+											<a asp-controller="Profile" asp-action="Profile" asp-route-aUserName="@Model.Owner.UserName" class="btn" style="background-color:#ff6219; color:#fff;">Till Profil</a>
 										</div>
 										<h6 class="lead fw-normal mb-1" style="color:#ff6219;">Kontakt</h6>
 							<div class="p-1 bg-body-tertiary">
