--- a/CV_Projekt/CV_Projekt/Views/Shared/_Layout.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-white" href="#">
+                                <a class="nav-link text-white" href="/Message/ChatList">
                                     <i class="fa-solid fa-envelope text-light position-relative">
                                         <span class="badge rounded-pill badge-notification bg-danger position-absolute top-0 left-0 translate-middle" style="font-size:0.5rem;">1</span>
                                     </i>
@@ -62,9 +62,8 @@
                                 @if (!User.Identity.IsAuthenticated)
 								{
                                 <li>
-                                    <a class="dropdown-item text-black" asp-controller="Message" asp-action="ChatList" asp-route-id=""                            asp-route-id="1">
-                                Visa Meddelanden
-                                </a></div>>
+                                    <a class="dropdown-item text-black" href="#">
+                                
                                         <i class="fa-solid fa-envelope text-black position-relative">
                                             <span class="badge rounded-pill badge-notification bg-danger position-absolute top-0 left-0 translate-middle" style="font-size:0.5rem;">1</span>
                                         </i>
