--- a/CV_Projekt/CV_Projekt/Views/Cv/Cv.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Cv/Cv.cshtml
@@ -33,7 +33,7 @@
 					<div class="card-body p-4 text-black">
 						<div class="mb-5  text-body">
 										<div class="d-flex justify-content-center mt-2" style="margin-bottom:2rem;">
-											<a asp-controller="Profile" asp-action="Profile" asp-route-aUserName="@Model.Owner.UserName" class="btn" style="background-color:#ff6219; color:#fff;">Till Profil</a>
+											<a asp-controller="Profile" asp-action="Profile" asp-route-id="@Model.Owner.Id" class="btn" style="background-color:#ff6219; color:#fff;">Till Profil</a>
 										</div>
 										<h6 class="lead fw-normal mb-1" style="color:#ff6219;">Kontakt</h6>
 										<div class="p-1 bg-body-tertiary">
