--- a/CV_Projekt/CV_Projekt/Views/Shared/_Layout.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Shared/_Layout.cshtml
@@ -1,5 +1,8 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
+
+@using System.Security.Claims;
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -32,7 +35,7 @@
                         @if(User.Identity.IsAuthenticated)
                         {
                             <li class="nav-item">
-                                <a asp-controller="Profile" asp-action="Profile" asp-route-aUserName="@User.Identity.Name" class="nav-link text-white">
+                                <a asp-controller="Profile" asp-action="Profile" asp-route-id="@User.FindFirstValue(ClaimTypes.NameIdentifier)" class="nav-link text-white">
                                     <i class="fa-solid fa-user"></i>
                                 </a>
                             </li>
