--- a/CV_Projekt/CV_Projekt/Views/Profile/Profile.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Profile/Profile.cshtml
@@ -48,76 +48,83 @@
 											</a>
                                            
 										</div>
-										<h6 class="lead fw-normal mb-1" style="color:#ff6219;">Kontakt</h6>
-										<div class="p-1 bg-body-tertiary">
-
-											@if (@Model.User.ContactInformation != null)
-											{
-												<ul class="list-unstyled formatted-list">
-													<li class="formatted-li"><b>Email:</b> <span style="white-space: nowrap;">@Model.User.UserName</span> </li>
-													<li class="formatted-li"><b>Telefon:</b> <span style="white-space: nowrap; ">@Model.User.ContactInformation.Phone</span></li>
-													@if (!string.IsNullOrEmpty(@Model.User.ContactInformation.Address))
-													{
-														<li class="formatted-li"><b>Adress:</b> <span style="white-space: nowrap;">@Model.User.ContactInformation.Address</span> </li>
-													}
-												</ul>
-											}
-											else
-											{
-												<p class="fw-light">Kontaktinformation saknas</p>
-											}
-
-											
 										
-
-								
-
-										</div>
 									</div>
 								</div>
 							</div>
 							
 								<div class="card col-sm-7 mb-2 proj-container">
 									<div class="card-body text-black">
-                                    <img src="https://mdbcdn.b-cdn.net/img/Photos/Lightbox/Original/img%20(112).webp" alt="image 1"
-                                         class="card-img-top w-100 rounded-3">
-										<h6 class="card-header" style="background-color:#fff; color:#ff6219; text-align:center;">Projekt jag medverkar i</h6>
+                                    
+										<h6 class="card-header" style="background-color:#fff; color:#ff6219; text-align:center;">Info om mig</h6>
 
-										@foreach (var proj in Model.User.JoinedProjects)
-										{
+										
 											<div class="proj-item">
-												<p class="card-text">@proj.Title</p>
-											<p class="card-text"><i>@proj.Description</i></p>
+												<p class="card-text">@Model.User.Description</p>
+											
 											</div>
-										}
+										
 										</div>
 										</div>
-									
+
+							
 									</div>
 					<div class="row">
 						<div class="col-sm-5">
-							
+								<h6 class="lead fw-normal mb-1" style="color:#ff6219;">Kontakt</h6>
+								<div class="p-1 bg-body-tertiary">
+
+									@if (@Model.User.ContactInformation != null)
+									{
+										<ul class="list-unstyled formatted-list">
+											<li class="formatted-li"><b>Email:</b> <span style="white-space: nowrap;">@Model.User.UserName</span> </li>
+											<li class="formatted-li"><b>Telefon:</b> <span style="white-space: nowrap; ">@Model.User.ContactInformation.Phone</span></li>
+											@if (!string.IsNullOrEmpty(@Model.User.ContactInformation.Address))
+											{
+												<li class="formatted-li"><b>Adress:</b> <span style="white-space: nowrap;">@Model.User.ContactInformation.Address</span> </li>
+											}
+										</ul>
+									}
+									else
+									{
+										<p class="fw-light">Kontaktinformation saknas</p>
+									}
+
+
+
+
+
+
+								</div>
 						</div>
 						
 
-						<div class="card col-sm-7 mb-2 proj-container">
-							<div class="card-body text-black">
-									<img src="https://mdbcdn.b-cdn.net/img/Photos/Lightbox/Original/img%20(112).webp" alt="image 1"
-										 class="card-img-top w-100 rounded-3">
-								<h6 class="card-header" style="background-color:#fff; color:#ff6219; text-align:center;">Projekt jag skapat</h6>
+						<div class="col-sm-7 mb-2 ">
+								<h4 style="color:#ff6219;"><i class="fa-solid fa-hashtag"></i></h4>
+								<div class="p-1 bg-body-tertiary">
 
-                                    @foreach (var project in Model.User.CreatedProjects)
-                                    {
-                                       
-                                            
-                                            <div class="proj-item">
-                                                <p class="card-text">@project.Title</p>
-                                                <p class="card-text"><i>@project.Description</i></p>
-                                            </div>
-                                       
-                                    }
+									@if (@Model.User.Tags != null)
+									{
+										@foreach (var tags in Model.User.Tags)
+										{
+											<ul class="list-unstyled formatted-list">
+												<li class="formatted-li" style="white-space: nowrap;">@Model.User.Tags </li>
+											</ul>
+										}
+									}
+									else
+									{
+										<p class="fw-light">Taggar saknas</p>
+									}
+
+
+
+
+
+
+								</div>
+
 							</div>
-						</div>
 					</div>
 					
 
