--- a/CV_Projekt/CV_Projekt/Views/Cv/CreateCv.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Cv/CreateCv.cshtml
@@ -243,7 +243,7 @@
                 
 
             <div class="py-3 pb-4 border-bottom">
-                <button type="submit" class="btn border border-light button mr-3 text-light" style="background-color:#ff6219;">Skapa CV</button>
+                <button type="submit" class="btn border border-light button mr-3 text-light" style="background-color:#ff6219;">Spara CV</button>
                 <button class="btn button" style="border:solid 1px #ff6219; background-color: #fff;; color: #ff6219">Avbryt</button>
             </div>
 
