--- a/CV_Projekt/CV_Projekt/Views/Message/AddAnon.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Message/AddAnon.cshtml
@@ -4,7 +4,7 @@
 
 <h2 style="color:#FFF;">Skriv ett nytt meddelande</h2>
 
-<form asp-action="Add" method="post">
+<form asp-action="AddAnon" method="post">
 	<label style="color:#FFF;">Till: @Model.Receiver.FirstName   @Model.Receiver.LastName</label>
 	<br />
 	<label style="color:#FFF;">Subject: </label>
